# internal/app/api/note_v1/delete.go
@@ -10,23 +10,10 @@ import (
 )
 
 func (n *Note) Delete(ctx context.Context, req *desc.DeleteRequest) (*empty.Empty, error) {
-	res, err := n.noteService.Delete(ctx, req)
+	err := n.noteService.Delete(ctx, req)
 	if err != nil {
 		return nil, err
 	}
 
-	return res, nil
-
-	/*dbDsn := fmt.Sprintf(
-		"host=%s port=%s user=%s password=%s dbname=%s sslmode=%s",
-		host, port, dbUser, dbPassword, dbName, sslMode,
-	)
-
-	db, err := sqlx.Open("pgx", dbDsn)
-	if err != nil {
-		return nil, err
-	}
-	defer db.Close()
-
-	return &empty.Empty{}, nil*/
+	return nil, err
 }
